Pax load unload wired up

--- a/UTShuttleSwift/Base.lproj/Main.storyboard
+++ b/UTShuttleSwift/Base.lproj/Main.storyboard
@@ -1971,7 +1971,7 @@
                                     <constraint firstItem="y95-KO-VGU" firstAttribute="leading" secondItem="pl1-GF-aU1" secondAttribute="leading" constant="30" id="q6V-7z-gnt"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fQd-MX-f5A">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fQd-MX-f5A">
                                 <rect key="frame" x="0.0" y="254" width="375" height="413"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="xur-Ps-4gM">
@@ -2248,6 +2248,7 @@
                                                                 <button opaque="NO" tag="104" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vkU-wg-u3d">
                                                                     <rect key="frame" x="0.0" y="2" width="72" height="35.5"/>
                                                                     <color key="backgroundColor" red="0.36470588240000001" green="0.7725490196" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <state key="normal" title="BOARD">
                                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </state>
@@ -2419,7 +2420,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="byf-tE-SGz">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="byf-tE-SGz">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -2644,7 +2645,7 @@
         <!--Trip History View Controller-->
         <scene sceneID="NtC-xh-2xw">
             <objects>
-                <viewController storyboardIdentifier="tripHistoryVC" id="vRa-y0-5Hj" customClass="TripHistoryViewController" customModule="UTShuttleSwift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="tripHistoryVC" automaticallyAdjustsScrollViewInsets="NO" id="vRa-y0-5Hj" customClass="TripHistoryViewController" customModule="UTShuttleSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="kYu-fM-EpL"/>
                         <viewControllerLayoutGuide type="bottom" id="cri-kM-xYA"/>
@@ -2681,13 +2682,13 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gNK-I7-smA">
                                                     <rect key="frame" x="43" y="45.5" width="327" height="46"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" tag="102" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="South Street " textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="0" minimumScaleFactor="0.80000001192092896" translatesAutoresizingMaskIntoConstraints="NO" id="0Ec-Ji-xFj">
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="102" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="South Street " textAlignment="right" lineBreakMode="middleTruncation" numberOfLines="0" minimumScaleFactor="0.80000001192092896" translatesAutoresizingMaskIntoConstraints="NO" id="0Ec-Ji-xFj">
                                                             <rect key="frame" x="0.0" y="5" width="133.5" height="36"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" tag="103" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Term B" textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="0" minimumScaleFactor="0.80000001192092896" translatesAutoresizingMaskIntoConstraints="NO" id="ylb-Fc-Lc9">
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="103" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Term B" lineBreakMode="middleTruncation" numberOfLines="0" minimumScaleFactor="0.80000001192092896" translatesAutoresizingMaskIntoConstraints="NO" id="ylb-Fc-Lc9">
                                                             <rect key="frame" x="193.5" y="5" width="133.5" height="36"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
@@ -2780,7 +2781,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WMU-1E-I7X">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WMU-1E-I7X">
                                 <rect key="frame" x="0.0" y="20" width="375" height="597"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -3030,7 +3031,7 @@
                                 <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gJY-2j-nrf">
-                                        <rect key="frame" x="20" y="5" width="335" height="40"/>
+                                        <rect key="frame" x="30" y="5" width="315" height="40"/>
                                         <color key="backgroundColor" red="0.19607843137254902" green="0.58823529411764708" blue="0.5490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="VEM-8m-PHE"/>
@@ -3048,10 +3049,10 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="gJY-2j-nrf" firstAttribute="leading" secondItem="FD1-tV-6ZO" secondAttribute="leading" constant="20" id="S1x-AT-a0m"/>
+                                    <constraint firstItem="gJY-2j-nrf" firstAttribute="leading" secondItem="FD1-tV-6ZO" secondAttribute="leading" constant="30" id="S1x-AT-a0m"/>
                                     <constraint firstItem="gJY-2j-nrf" firstAttribute="centerY" secondItem="FD1-tV-6ZO" secondAttribute="centerY" id="dUV-jM-WiZ"/>
                                     <constraint firstAttribute="height" constant="50" id="n42-XU-0wu"/>
-                                    <constraint firstAttribute="trailing" secondItem="gJY-2j-nrf" secondAttribute="trailing" constant="20" id="nXZ-Vs-but"/>
+                                    <constraint firstAttribute="trailing" secondItem="gJY-2j-nrf" secondAttribute="trailing" constant="30" id="nXZ-Vs-but"/>
                                 </constraints>
                             </view>
                         </subviews>
